# streamdeck

streamdeck-api/: Cargo.toml  deck_states.json
streamdeck-api/src/: main.rs  server.rs  ws_session.rs
streamdeck-interface/: Cargo.toml
streamdeck-interface/src/: connectionmanager.rs  deckactor.rs  deckinterface.rs  deckmanager.rs  deckstate.rs  hub.rs  info.rs  lib.rs
