[package]
name = "streamdeck-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck-interface = { path="../streamdeck-interface/", version="0.1.0" }
hidapi = "1.4.1"
tokio = { version = "1.19.2", features = ["full"] }