[package]
name = "streamdeck-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck = "0.6.2"
hidapi = "1.4.1"
tokio = { version = "1.19.2", features = ["full"] }
actix="0.13.0"
actix-rt="2.7.0"