[package]
name = "streamdeck-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck = "0.7.0"
hidapi = "1.5.0"
actix="0.13.0"
actix-rt="2.7.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
rand = "0.8.5"
